@@ -17,41 +17,68 @@
 package com.echothree.control.user.warehouse.server.command;
 
 import com.echothree.control.user.warehouse.common.form.GetWarehousesForm;
-import com.echothree.control.user.warehouse.common.result.GetWarehousesResult;
 import com.echothree.control.user.warehouse.common.result.WarehouseResultFactory;
+import com.echothree.model.control.party.common.PartyTypes;
+import com.echothree.model.control.security.common.SecurityRoleGroups;
+import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.control.warehouse.server.control.WarehouseControl;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.model.data.warehouse.server.entity.Warehouse;
+import com.echothree.model.data.warehouse.server.factory.WarehouseFactory;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.CommandSecurityDefinition;
+import com.echothree.util.server.control.PartyTypeDefinition;
+import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetWarehousesCommand
-        extends BaseSimpleCommand<GetWarehousesForm> {
+        extends BaseMultipleEntitiesCommand<Warehouse, GetWarehousesForm> {
 
+    private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
+                new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.Warehouse.name(), SecurityRoles.List.name())
+                ))
+        ));
+
+        FORM_FIELD_DEFINITIONS = List.of();
     }
-    
+
     /** Creates a new instance of GetWarehousesCommand */
     public GetWarehousesCommand(UserVisitPK userVisitPK, GetWarehousesForm form) {
-        super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, true);
+        super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
 
     @Override
-    protected BaseResult execute() {
+    protected Collection<Warehouse> getEntities() {
         var warehouseControl = Session.getModelController(WarehouseControl.class);
-        GetWarehousesResult result = WarehouseResultFactory.getGetWarehousesResult();
-        
-        result.setWarehouses(warehouseControl.getWarehouseTransfers(getUserVisit()));
-        
+
+        return warehouseControl.getWarehouses();
+    }
+
+    @Override
+    protected BaseResult getTransfers(Collection<Warehouse> entities) {
+        var result = WarehouseResultFactory.getGetWarehousesResult();
+
+        if(entities != null) {
+            var warehouseControl = Session.getModelController(WarehouseControl.class);
+
+            if(session.hasLimit(WarehouseFactory.class)) {
+                result.setWarehouseCount(warehouseControl.countWarehouses());
+            }
+
+            result.setWarehouses(warehouseControl.getWarehouseTransfers(getUserVisit(), entities));
+        }
+
         return result;
     }
-    
+
 }
